# winterreise

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix
config/: config.xml  style.css  tilings.xml
deb.usr-share/: style.css
src/: lib.rs  winj.rs  wint.rs
src/config/: config.xml  style.css  tilings.xml
