[package]
name = "winterreise"
version = "0.1.0"
authors = ["Andrei Mikhailov <amkhlv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "wint"
path = "src/wint.rs"

[[bin]]
name = "winj"
path = "src/winj.rs"

[dependencies.gtk]
version = "0.9.2"

[dependencies.glib]
version = "0.10.3"

[dependencies.gdk]
version = "0.13.2"

[dependencies.gdk-sys]
version = "0.10.0"

[dependencies.gio]
version = "0.9.1"

[dependencies.dirs]
version = "1.0.5"

[dependencies.xcb]
version = "0.9"

[dependencies.xcb-util]
version = "0.3.0"
features = ["ewmh","icccm"]

[dependencies.serde]
version = "1.0.126"

[dependencies.serde_derive]
version = "1.0.126"

[dependencies.serde-xml-rs]
version = "0.4.1"

[dependencies.clap]
version = "2.33.3"

[dependencies.hex]
version = "0.4.3"
